--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "reveal.js-appearance",
     "version": "1.1.0",
-    "description": "A plugin for Reveal.js 4 that adds appearance effects to elements",
+    "description": "A plugin for Reveal.js that adds appearance effects to elements",
     "keywords": "reveal, reveal.js, reveal-plugin, plugin, text effects",
     "homepage": "https://github.com/Martinomagnifico/reveal.js-appearance",
     "repository": {
