--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "reveal.js-appearance",
     "version": "1.1.2",
-    "description": "A plugin for Reveal.js that sequentially adds appearance effects to elements like in Powerpoint",
+    "description": "An animation plugin for Reveal.js that animates elements sequentially like in Powerpoint. Perfect for online portfolios or other presentations with images.",
     "keywords": "reveal, reveal.js, reveal-plugin, plugin, text effects, powerpoint",
     "homepage": "https://github.com/Martinomagnifico/reveal.js-appearance",
     "repository": {
