--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "reveal.js-appearance",
-    "version": "1.1.3",
+    "version": "1.2.0",
+    "main": "plugin/appearance/appearance.js",
+    "module": "plugin/appearance/appearance.esm.js",
     "description": "An animation plugin for Reveal.js that animates elements sequentially like in Powerpoint. Perfect for online portfolios or other presentations with images.",
     "keywords": "reveal, reveal.js, reveal-plugin, plugin, text effects, powerpoint",
     "homepage": "https://github.com/Martinomagnifico/reveal.js-appearance",
@@ -9,7 +11,7 @@
         "url": "https://github.com/Martinomagnifico/reveal.js-appearance.git"
     },
     "author": "Martijn De Jongh",
-    "license": "MIT, Copyright (C) 2022 Martijn De Jongh",
+    "license": "MIT, Copyright (C) 2023 Martijn De Jongh",
     "peerDependencies": {
         "reveal.js": "^4.2"
     }
