--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reveal.js-appearance",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "An animation plugin for Reveal.js that animates elements sequentially like in Powerpoint. Perfect for online portfolios or other presentations with images.",
   "keywords": [
     "reveal",
@@ -37,12 +37,12 @@
   },
   "browserslist": "> 2%, not dead",
   "devDependencies": {
-    "@babel/preset-env": "^7.22.5",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.2",
-    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@babel/preset-env": "^7.23.2",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "browser-sync": "^2.29.3",
-    "core-js": "^3.31.0",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -52,7 +52,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "merge-stream": "^2.0.0",
-    "rollup": "^2.79.1",
+    "rollup": "^4.2.0",
     "sass": "^1.63.6"
   },
   "dependencies": {
