--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reveal.js-appearance",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "An animation plugin for Reveal.js that animates elements sequentially like in Powerpoint. Perfect for online portfolios or other presentations with images.",
   "keywords": [
     "reveal",
@@ -32,9 +32,7 @@
     "build": "NODE_ENV=prod gulp build"
   },
   "overrides": {
-    "chokidar": "3.5.3",
-    "glob-parent": "6.0.2",
-    "axios": "1.6.1"
+    "ws": "8.17.1"
   },
   "browserslist": "> 2%, not dead",
   "devDependencies": {
@@ -43,21 +41,21 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "browser-sync": "^2.29.3",
+    "browser-sync": "^3.0.2",
     "del": "^5.1.0",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.0",
     "gulp-autoprefixer": "^8.0.0",
-    "gulp-header": "^2.0.9",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-tap": "^2.0.0",
     "merge-stream": "^2.0.0",
     "rollup": "^4.2.0",
     "sass": "^1.63.6"
   },
   "dependencies": {
-    "reveal.js": "^5.0.1"
+    "reveal.js": "^5.0.4"
   },
   "copydependencies": [
     "reveal.js"
