--- a/package.json
+++ b/package.json
@@ -1,77 +1,72 @@
 {
-  "name": "reveal.js-appearance",
-  "version": "1.4.0",
-  "description": "An animation plugin for Reveal.js that animates elements sequentially like in Powerpoint. Perfect for online portfolios or other presentations with images.",
-  "keywords": [
-    "reveal",
-    "reveal.js",
-    "reveal-plugin",
-    "plugin",
-    "text effects",
-    "powerpoint"
-  ],
-  "author": {
-    "name": "Martijn De Jongh (Martino)",
-    "email": "martijn.de.jongh@gmail.com",
-    "web": "https://martinomagnifico.github.io",
-    "url": "https://martinomagnifico.github.io",
-    "username": "martinomagnifico"
-  },
-  "homepage": "https://github.com/Martinomagnifico/reveal.js-appearance",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/martinomagnifico/reveal.js-appearance.git"
-  },
-  "functionname": "Appearance",
-  "type": "module",
-  "main": "plugin/appearance/appearance.js",
-  "module": "plugin/appearance/appearance.esm.js",
-  "browser": "plugin/appearance/appearance.js",
-  "style": "plugin/appearance/appearance.css",
-  "files": [
-    "plugin/appearance",
-    "src/plugin"
-  ],
-  "scripts": {
-    "start": "npm run dev",
-    "copy-reveal": "node scripts/copy-reveal.mjs",
-    "dev": "vite",
-    "prebuild": "rimraf demo plugin",
-    "build-plugin": "vite build -c vite.lib.config.js",
-    "build-demo": "vite build",
-    "copy-plugin": "node scripts/copy-plugin.mjs",
-    "build": "npm run copy-reveal && npm run build-plugin && npm run build-demo && npm run copy-plugin",
-    "format": "biome format --write .",
-    "lint": "biome lint .",
-    "check": "biome check --write .",
-    "ci": "biome ci ."
-  },
-  "demo": {
-    "server": {
-      "port": 8000,
-      "open": "index.html"
+    "name": "reveal.js-appearance",
+    "version": "1.4.0",
+    "description": "An animation plugin for Reveal.js that animates elements sequentially like in Powerpoint. Perfect for online portfolios or other presentations with images.",
+    "keywords": [
+        "reveal",
+        "reveal.js",
+        "reveal-plugin",
+        "plugin",
+        "text effects",
+        "powerpoint"
+    ],
+    "homepage": "https://github.com/martinomagnifico/reveal.js-appearance",
+    "license": "MIT",
+    "author": {
+        "name": "Martijn De Jongh (Martino)",
+        "email": "martijn.de.jongh@gmail.com",
+        "web": "https://martinomagnifico.github.io",
+        "url": "https://martinomagnifico.github.io",
+        "username": "martinomagnifico"
     },
-    "presentation": {
-      "title": "Appearance demo",
-      "theme": "black"
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/martinomagnifico/reveal.js-appearance.git"
+    },
+    "type": "module",
+    "main": "./plugin/appearance/appearance.js",
+    "module": "./plugin/appearance/appearance.mjs",
+    "exports": {
+        ".": {
+            "import": "./plugin/appearance/appearance.mjs",
+            "require": "./plugin/appearance/appearance.js"
+        },
+        "./plugin/appearance/appearance.esm.js": "./plugin/appearance/appearance.mjs",
+        "./plugin/appearance/appearance.css": "./plugin/appearance/appearance.css",
+        "./appearance.css": "./plugin/appearance/appearance.css"
+    },
+    "files": [
+        "plugin/appearance"
+    ],
+    "scripts": {
+        "start": "npm run dev",
+        "copy-reveal": "node scripts/copy-reveal.mjs",
+        "copy-plugin": "node scripts/copy-plugin.mjs",
+        "dev": "vite",
+        "prebuild": "rimraf demo plugin",
+        "build-plugin": "vite build -c vite.lib.config.ts",
+        "build-demo": "vite build -c vite.config.ts",
+        "build": "npm run build-plugin && npm run build-demo && npm run copy-reveal && npm run copy-plugin",
+        "format": "biome format --write .",
+        "lint": "biome lint .",
+        "check": "biome check --write .",
+        "ci": "biome ci ."
+    },
+    "devDependencies": {
+        "@biomejs/biome": "latest",
+        "@types/node": "^22.10.1",
+        "@types/reveal.js": "^5.0.4",
+        "@vituum/vite-plugin-pug": "latest",
+        "animate.css": "^4.1.1",
+        "fs-extra": "latest",
+        "reveal.js-plugintoolkit": "0.2.4",
+        "rimraf": "^6.0.1",
+        "sass": "latest",
+        "typescript": "^5.7.2",
+        "vite": "latest",
+        "vituum": "1.2.0"
+    },
+    "peerDependencies": {
+        "reveal.js": ">=4.0.0"
     }
-  },
-  "peerDependencies": {
-    "reveal.js": ">=5.0.0"
-  },
-  "devDependencies": {
-    "animate.css": "^4.1.1",
-    "@biomejs/biome": "latest",
-    "@types/node": "^22.10.1",
-    "@types/reveal.js": "^5.0.4",
-    "@vituum/vite-plugin-pug": "latest",
-    "fs-extra": "latest",
-    "reveal.js-plugintoolkit": "^0.1.4",
-    "rimraf": "^6.0.1",
-    "sass": "latest",
-    "typescript": "^5.7.2",
-    "vite": "6.2.3",
-    "vituum": "1.2.0"
-  }
 }
