--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "./plugin/appearance/appearance.css": "./plugin/appearance/appearance.css",
         "./appearance.css": "./plugin/appearance/appearance.css"
     },
+    "style": "plugin/appearance/appearance.css",
     "files": [
         "plugin/appearance"
     ],
@@ -50,6 +51,7 @@
         "format": "biome format --write .",
         "lint": "biome lint .",
         "check": "biome check --write .",
+        "preview": "npm run build && vite preview",
         "ci": "biome ci ."
     },
     "devDependencies": {
@@ -59,7 +61,7 @@
         "@vituum/vite-plugin-pug": "latest",
         "animate.css": "^4.1.1",
         "fs-extra": "latest",
-        "reveal.js-plugintoolkit": "0.2.4",
+        "reveal.js-plugintoolkit": "1.0.2",
         "rimraf": "^6.0.1",
         "sass": "latest",
         "typescript": "^5.7.2",
